fixed gap for nav ul

--- a/day-1-flexbox/5-header-navbar/begin/css/style.css
+++ b/day-1-flexbox/5-header-navbar/begin/css/style.css
@@ -298,6 +298,7 @@ footer address {
     
     nav ul {
         justify-content: center;
+        gap: 1.2em;
     }
     nav a {
         background-color: transparent;
